--- a/style.css
+++ b/style.css
@@ -25,15 +25,35 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction:column;
     
 }
 .fleep{
     max-width: 50%;
     max-height: 50%;
 }
+.stats {
+    display:flex;
+    flex-direction:row;
+}
+.stats div {
+    margin:20px;
+    padding:5px;
+    border: 1px black solid;
+    min-width: 90px;
+}
+#message {
+    height:30px;
+}
 
 
 .interactBar {
-    display: flex
-    
+    display: flex;
+    padding: 15px;
+    justify-content: center;
+}
+.interactBar button {
+    height: 30px;
+    width:50px;
+    margin: 10px;
 }
